# Traveling-Salesman-Problem

./:  tsp solver.py  .gitattributes  .gitignore  README.md  TODO.md  TSP Analysis.ipynb  constants.py  ga_tuning.py  generate_figures.py  main.py  pyproject.toml  sa_tuning.py  setup_dataset.py  tsp_analysis.ipynb  util.py
algorithm/: __init__.py  base.py  genetic_algo.py  nearest_neighbor.py  random_solver.py  simulated_annealing.py
figure_scripts/: box_plot_figures.py  common.py  random_baseline_figures.py  relative_work_figures.py  relative_work_nn_figures.py  time_budget_figures.py  time_budget_nn_figures.py
figures/: box_plot_figures.json  random_baseline_figures.json  relative_work_figures.json  relative_work_nn_figures.json  time_budget_figures.json  time_budget_nn_figures.json
tests/: README.md  test_main.py
tsp/: __init__.py  controller.py  io.py  model.py
tuning/: ga_tuning.py  sa_tuning.py  tuning_10.json  tuning_5.json
