[project]
name = "traveling-salesman-problem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "requests>=2.31.0",
    "nbstripout>=0.8.1",
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "scikit-optimize>=0.10.2",
    "numba>=0.62.1",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
